--- a/firebase.json
+++ b/firebase.json
@@ -35,6 +35,10 @@
                     {
                         "key": "Strict-Transport-Security",
                         "value": "max-age=31536000; includeSubDomains"
+                    },
+                    {
+                        "key": "Content-Security-Policy",
+                        "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://apis.google.com https://www.google.com https://www.gstatic.com https://www.google.com/recaptcha/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://res.cloudinary.com https://www.google.com https://www.gstatic.com; connect-src 'self' https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://www.google.com/recaptcha/ https://api.cloudinary.com;"
                     }
                 ]
             }
@@ -42,5 +46,8 @@
     },
     "firestore": {
         "rules": "firestore.rules"
+    },
+    "storage": {
+        "rules": "storage.rules"
     }
 }
